# android-realtime-rustface

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/planet/realtimerustface/: DetectInfo.java  Detector.java  DrawView.java  ImageUtils.java  MainActivity.java
app/src/main/java/com/planet/realtimerustface/pico/: Detector.java  DrawView.java  PicoActivity.java  TextureVideoViewOutlineProvider.java
app/src/main/java/io/github/planet0104/rustface/: Area.java  FaceInfo.java  Pico.java  RustFace.java
app/src/main/jni/lib-rustface/: Cargo.toml  build.cmd  build.rs  build.sh  debug.cmd
app/src/main/jni/lib-rustface/.cargo/: config
app/src/main/jni/lib-rustface/src/: jni_graphics.rs  lib.rs  pico.rs
app/src/main/res/layout/: activity_main.xml  activity_pico.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/planet/realtimerustface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
