[package]
name = "rustface"
version = "1.0.0"
authors = ["JiaYe"]
edition = "2018"

[dependencies]
#log = "0.4.6"
#android_logger = "0.8.3"
jni = { version = "0.12.3", default-features = false }
rustface = "0.1.2"

[dependencies.image]
version = "0.21.2"
default_features = false

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'